# PythonCC

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/workflows/: CICD.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.__project_folder_name}}/: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements-docs.txt
{{cookiecutter.__project_folder_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.__project_folder_name}}/{{cookiecutter.project_slug}}/: main.py
